--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <p>Контакты</p>
+        <a class="header-email" href="mailto:zhenya11-2011@mail.ru">zhenya11-2011@mail.ru</a>
+        <a class="header-phone" href="tel:+79233336037">+7 923 333 60 37</a>
       </div>
     </header>
-
+ 
     <section class="hero-image">
       <h1 class="heading">Опознанный Енот</h1>
       <p>Junior верстальщик</p>
@@ -21,6 +22,9 @@
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure>
+        <img src="files/user.jpg" width="928" height="536" alt="фотография Опознанного Енота">
+      </figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -29,8 +33,12 @@
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт инструктора Кекса">
+      </figure>
       <h3>Сайт инструктора Кекса</h3>
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
+
       <p>Небольшой лендинг о школе для начинающих.</p>
 
       <h3>Блог начинающего верстальщика</h3>
@@ -38,7 +46,10 @@
     </section>
 
     <footer class="page-footer">
-      Контакты в подвале
+      <div class="container">
+        <a class="footer-email" href="mailto:zhenya11-2011@mail.try">zhenya11-2011@mail.ru</a>
+        <a class="footer-phone" href="+79233336037">+7 923 333 60 37</a>
+      </div>
     </footer>
   </body>
 </html>
